# Recipes

./: .gitignore  README.md  recipes.cabal
Data/Recipe/: Parser.hs
base/src/: Main.hs
base/src/Data/Recipe/: Parser.hs
base/tests/: alfredo.recipe  nuggets.recipe  simple.recipe
src/Data/Recipe/: Structure.hs
tests/: alfredo.recipe  nuggets.hs  nuggets.recipe  simple.recipe
web/: recipes-web.cabal
web/src/: Main.hs
